--- a/css/layout/_contents.scss
+++ b/css/layout/_contents.scss
@@ -357,8 +357,10 @@ body {
 #info {
   .contents-area {
     @include onFlex(flex-start, flex-start);
+    padding: 0 rem(20);
     &__left {
       width: rem(180);
+      box-sizing: content-box;
       .img-area {
         display: inline-block;
         width: rem(180);
@@ -372,9 +374,11 @@ body {
       @include onFlex(flex-start, flex-start);
       width: calc(100% - 11.25rem);
       padding-left: rem(100);
+      margin: 0 auto;
       .info {
         &__cont {
           width: 100%;
+          max-width: rem(720px);
           &-title {
             padding-bottom: rem(20);
             h2 {
@@ -388,7 +392,7 @@ body {
             }
           }
           &-group {
-            @include onFlex(flex-start, space-between);
+            // @include onFlex(flex-start, space-between);
             h3 {
               position: relative;
               font-size: rem(18);
@@ -426,13 +430,28 @@ body {
                 font-size: rem(14);
                 color: $baseColor;
                 padding-left: rem(12);
+                p {
+                  margin-top: rem(5);
+                  &:last-child {
+                    margin-top: rem(8);
+                  }
+                }
                 & + li {
                   margin-top: rem(5);
                 }
               }
+              &.project {
+                @include onFlex(flex-start, flex-start);
+                flex-wrap: wrap;
+                margin-top: rem(-20);
+                li {
+                  width: calc(33.33% - 1.25rem);
+                  margin: rem(30) rem(20) 0 0;
+                }
+              }
             }
             & + .info__cont-list {
-              margin-top: rem(15);
+              margin-top: rem(35);
             }
           }
           .skill {
@@ -448,11 +467,13 @@ body {
             }
             &__bar {
               position: relative;
-              width: calc(100% - 7rem);
-              height: rem(15);
+              width: rem(530);
+              max-width: rem(530);
+              height: rem(10);
               min-width: rem(185);
               border: rem(1) solid $subTxtColor;
               border-radius: rem(10);
+              margin-left: rem(20);
               box-sizing: content-box;
               overflow: hidden;
             }
@@ -525,15 +546,45 @@ body {
     transform: translate(-50%, -50%);
   }
 }
-.btn {
-  &__close {
-  }
-}
 
 .msg-area {
   textarea {
     height: rem(300);
     border: rem(1) solid #dddddd;
+  }
+}
+
+.tag {
+  display: inline-block;
+  font-size: rem(10);
+  line-height: rem(15);
+  color: #ffffff;
+  border-radius: rem(3);
+  padding: rem(2) rem(5);
+  margin-top: rem(3);
+  // + .tag {
+  //   margin-left: rem(2);
+  // }
+  &.web {
+    background-color: #428bca;
+  }
+  &.mobile {
+    background-color: #20c12c;
+  }
+  &.response {
+    background-color: #428bca;
+  }
+  &.html {
+    background-color: #e9642a;
+  }
+  &.css {
+    background-color: #254bdd;
+  }
+  &.scss {
+    background-color: #c76494;
+  }
+  &.script {
+    background-color: #e8d34d;
   }
 }
 
@@ -562,20 +613,29 @@ body {
   }
 
   .ly-contents__section#info .contents-area__left {
-    width: 100%;
+    // width: 100%;
     text-align: center;
+    margin: 0 auto;
   }
   .ly-contents__section#info .contents-area__right {
     // display: block;
     align-items: center;
     justify-content: center;
-    width: 100%;
     padding-top: rem(50);
     padding-left: 0;
   }
   #info .contents-area__right .info__cont {
     // width: auto;
     padding: 0 20px;
+  }
+  #info .contents-area__right .info__cont .skill + .skill {
+    margin-top: rem(10);
+  }
+  #info .contents-area__right .info__cont .skill__bar {
+    margin-left: 0;
+  }
+  #info .contents-area__right .info__cont-list ul.project li {
+    width: calc(50% - 1.25rem);
   }
 }
 
@@ -645,6 +705,10 @@ body {
     display: block;
   }
 
+  .ly-contents__section#info .contents-area__right {
+    width: 100%;
+  }
+
   .ly-contents__section#info .contents-area__right .info__cont-group {
     display: block;
   }
@@ -675,26 +739,29 @@ body {
   .msg-area textarea {
     height: rem(245);
   }
-
-  @keyframes toLeft {
-    0% {
-      right: -10%;
-      opacity: 0;
-    }
-    100% {
-      right: 0;
-      opacity: 1;
-    }
+  #info .contents-area__right .info__cont-list ul.project li {
+    width: 100%;
   }
+}
 
-  @keyframes toRight {
-    0% {
-      left: -10%;
-      opacity: 0;
-    }
-    100% {
-      left: 0;
-      opacity: 1;
-    }
+@keyframes toLeft {
+  0% {
+    right: -10%;
+    opacity: 0;
+  }
+  100% {
+    right: 0;
+    opacity: 1;
+  }
+}
+
+@keyframes toRight {
+  0% {
+    left: -10%;
+    opacity: 0;
+  }
+  100% {
+    left: 0;
+    opacity: 1;
   }
 }
