--- a/css/layout/_contents.scss
+++ b/css/layout/_contents.scss
@@ -3,164 +3,7 @@
     textarea {
       padding: rem(10);
     }
-    .tab {
-      &-area {
-        padding-top: rem(52);
 
-        &__btn {
-          @include onFlex(center, center);
-          li {
-            position: relative;
-            width: 100%;
-            text-align: center;
-
-            &.on {
-              .tab__btn {
-                color: $white;
-                background-color: $baseColor;
-              }
-            }
-          }
-        }
-        .nav {
-          position: absolute;
-          top: rem(80);
-          left: 0;
-          width: 100%;
-          border-top: rem(1) solid #00203f33;
-          border-bottom: rem(1) solid #00203f33;
-          .tab-area__btn {
-            @include maxWidth;
-            li {
-              &.on {
-                .tab__btn {
-                  color: #222222;
-                  background-color: $white;
-                  &::after {
-                    width: 100%;
-                  }
-                }
-              }
-            }
-          }
-        }
-        &__contents {
-          margin: rem(30) 0;
-          .tab-area__contents {
-            margin-top: rem(30);
-          }
-        }
-      }
-      &__btn {
-        position: relative;
-        height: rem(50);
-        font-size: rem(20);
-        font-weight: 700;
-        line-height: rem(50);
-        color: $baseColor;
-        background-color: $white;
-        border-radius: rem(5);
-        padding: 0 rem(10);
-        &::after {
-          content: '';
-          position: absolute;
-          left: 50%;
-          bottom: 0;
-          width: 0;
-          height: rem(2);
-          background-color: $baseColor;
-          transform: translateX(-50%);
-          transition: width 0.3s ease-in;
-        }
-      }
-      &__contents {
-        padding-left: 5%;
-        padding-right: 5%;
-        .contents__wrap {
-          @include onFlex(flex-start, flex-start);
-          flex-wrap: wrap;
-          margin-top: rem(25);
-        }
-        .view__btn {
-          position: relative;
-          display: block;
-          width: rem(140);
-          height: rem(40);
-          color: #67c2a2;
-          line-height: rem(37);
-          text-align: center;
-          border: rem(1) solid #67c2a2;
-          border-radius: rem(5);
-          background-color: $white;
-          margin-top: rem(100);
-          transition: background-color 0.3s ease-in;
-          z-index: 10;
-          &:hover {
-            color: #fff;
-            background-color: #67c2a2;
-          }
-        }
-        &.on {
-          display: block;
-        }
-      }
-    }
-    .sort {
-      &-area {
-        &__btn {
-          @include onFlex(center, center);
-          li {
-            height: rem(30);
-            color: #222222;
-            line-height: rem(30);
-            background-color: $white;
-            border-radius: rem(5);
-            padding: 0 rem(10);
-            cursor: pointer;
-            &.on {
-              color: $white;
-              background-color: $baseColor;
-            }
-          }
-        }
-        &__contents {
-        }
-      }
-      &__btn {
-        cursor: pointer;
-      }
-      &__contents {
-        @include onFlex(flex-start, flex-start);
-        flex-wrap: wrap;
-        width: 100%;
-        margin-top: rem(25);
-        .contents {
-          display: none;
-          width: calc((99% / 3) - 1%);
-          text-align: left;
-          margin-bottom: rem(25);
-          margin-right: 1%;
-          overflow: hidden;
-          &.on {
-            display: block;
-          }
-        }
-        .img-area {
-          height: rem(300);
-          border: rem(1) solid #dddddd;
-        }
-        h4.title {
-          font-size: rem(14);
-          font-weight: 700;
-          text-align: left;
-          margin-top: rem(5);
-          margin-bottom: 0;
-        }
-        &:last-child {
-          margin-right: 0;
-        }
-      }
-    }
     .img-area {
       img {
         width: 100%;
@@ -271,17 +114,18 @@
         img {
           border-radius: rem(10);
         }
+        &::after {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          display: block;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(255, 255, 255, 0.3);
+        }
       }
-      // &::after {
-      //   content: '';
-      //   position: absolute;
-      //   top: 0;
-      //   left: 0;
-      //   display: block;
-      //   width: 100%;
-      //   height: 100%;
-      //   // background-color: rgba(0, 0, 0, 0.6);
-      // }
+
       .txt-area {
         position: relative;
         @include onFlex();
@@ -346,6 +190,9 @@
           padding-top: 0;
         }
       }
+    }
+    &__footer {
+      padding: rem(100) rem(100) 0;
     }
   }
 }
@@ -565,11 +412,11 @@ body {
   // + .tag {
   //   margin-left: rem(2);
   // }
-  &.web {
+  &.pc {
     background-color: #428bca;
   }
   &.mobile {
-    background-color: #20c12c;
+    background-color: #2ecf46;
   }
   &.response {
     background-color: #428bca;
@@ -585,6 +432,9 @@ body {
   }
   &.script {
     background-color: #e8d34d;
+  }
+  &.jquery {
+    background-color: #8d2ae9;
   }
 }
 
