--- a/css/ui.css
+++ b/css/ui.css
@@ -415,33 +415,6 @@ button {
      object-position: center 0;
 }
 
-.ly-wrap footer {
-  background-color: #348597;
-}
-
-.ly-wrap footer .ly-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  max-width: 75rem;
-  margin: 0 auto;
-  height: 5rem;
-  font-size: 0.75rem;
-  color: #f3a94f;
-  text-align: center;
-  padding: 0 5%;
-}
-
-.ly-wrap footer .ly-footer p {
-  line-height: 1.2;
-}
-
 .ly-wrap .btn__submit {
   height: 1.875rem;
   font-weight: 700;
@@ -449,6 +422,12 @@ button {
   border-radius: 0.3125rem;
   background-color: #348597;
   padding: 0 0.625rem;
+}
+
+.ly-contents {
+  position: relative;
+  padding: 5rem 0 1.25rem;
+  overflow: hidden;
 }
 
 .ly-contents__wrap {
@@ -536,8 +515,8 @@ button {
   height: 10%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-  -webkit-animation: fadeUp 1s forwards 1.4s ease-in-out;
-          animation: fadeUp 1s forwards 1.4s ease-in-out;
+  -webkit-animation: fadeUp 1s forwards 1.4s cubic-bezier(0.29, 0.08, 0.2, 1.11);
+          animation: fadeUp 1s forwards 1.4s cubic-bezier(0.29, 0.08, 0.2, 1.11);
 }
 
 .ly-contents__visual .img-area {
@@ -622,41 +601,11 @@ button {
   position: relative;
   height: 100%;
   background-color: #ffffff;
-  padding: 6.25rem 0;
+  padding: 6.25rem 1.25rem;
   z-index: 10;
 }
 
-.ly-contents__section {
-  position: relative;
-}
-
-.ly-contents__section .contents-area {
-  max-width: 75rem;
-  margin: 0 auto;
-  padding: 5rem 0 1.25rem;
-  overflow: hidden;
-}
-
-.ly-contents__section .contents-area .title {
-  font-size: 3rem;
-  text-align: center;
-  color: #348597;
-  margin-bottom: 4.375rem;
-}
-
-.ly-contents__section:first-child .contents-area {
-  padding-top: 0;
-}
-
-.ly-contents__footer {
-  padding: 6.25rem 6.25rem 0;
-}
-
-body.stop__scroll {
-  overflow: hidden;
-}
-
-#info .contents-area {
+.ly-contents__main .contents--modify {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -666,58 +615,30 @@ body.stop__scroll {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  padding: 0 1.25rem;
 }
 
-#info .contents-area__left {
-  width: 11.25rem;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-}
-
-#info .contents-area__left .img-area {
-  display: inline-block;
-  width: 11.25rem;
-  height: 11.25rem;
-  border-radius: 50%;
-  background: url("../images/seo_em01.png") #ffffff no-repeat center center/contain;
-}
-
-#info .contents-area__right {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+.ly-contents__main .contents__list {
   width: calc(100% - 11.25rem);
   padding-left: 6.25rem;
   margin: 0 auto;
 }
 
-#info .contents-area__right .info__cont {
-  width: 100%;
-  max-width: 45rem;
-}
-
-#info .contents-area__right .info__cont-title {
-  padding-bottom: 1.25rem;
-}
-
-#info .contents-area__right .info__cont-title h2 {
+.ly-contents__main .contents__list h2 {
   color: #348597;
+  margin-bottom: 1.25rem;
 }
 
-#info .contents-area__right .info__cont-title h2 span {
+.ly-contents__main .contents__list h2 span {
   font-size: 0.875rem;
   font-weight: 400;
   margin-left: 0.1875rem;
 }
 
-#info .contents-area__right .info__cont-group h3 {
+.ly-contents__main .contents__list + .info__cont {
+  padding-left: 12.5rem;
+}
+
+.ly-contents__main .contents__item h3 {
   position: relative;
   font-size: 1.125rem;
   font-weight: 400;
@@ -725,7 +646,7 @@ body.stop__scroll {
   padding-left: 0.75rem;
 }
 
-#info .contents-area__right .info__cont-group h3:after {
+.ly-contents__main .contents__item h3:after {
   content: '';
   position: absolute;
   top: 50%;
@@ -739,64 +660,29 @@ body.stop__scroll {
           transform: translateY(-50%);
 }
 
-#info .contents-area__right .info__cont-group h3 + ul {
+.ly-contents__main .contents__item h3 + ul {
   margin-top: 0.625rem;
 }
 
-#info .contents-area__right .info__cont-left {
-  width: 15.625rem;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-}
-
-#info .contents-area__right .info__cont-right {
-  width: calc(100% - 11.25rem);
-  padding-left: 6.25rem;
-}
-
-#info .contents-area__right .info__cont-list ul li {
+.ly-contents__main .contents__item ul li {
   font-size: 0.875rem;
   color: #348597;
   padding-left: 0.75rem;
 }
 
-#info .contents-area__right .info__cont-list ul li p {
+.ly-contents__main .contents__item ul li p {
   margin-top: 0.3125rem;
 }
 
-#info .contents-area__right .info__cont-list ul li p:last-child {
+.ly-contents__main .contents__item ul li p:last-child {
   margin-top: 0.5rem;
 }
 
-#info .contents-area__right .info__cont-list ul li + li {
+.ly-contents__main .contents__item ul li + li {
   margin-top: 0.3125rem;
 }
 
-#info .contents-area__right .info__cont-list ul.project {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-top: -1.25rem;
-}
-
-#info .contents-area__right .info__cont-list ul.project li {
-  width: calc(33.33% - 1.25rem);
-  margin: 1.875rem 1.25rem 0 0;
-}
-
-#info .contents-area__right .info__cont-list + .info__cont-list {
-  margin-top: 2.1875rem;
-}
-
-#info .contents-area__right .info__cont .skill {
+.ly-contents__main .contents__item ul.skill li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -811,13 +697,13 @@ body.stop__scroll {
   color: #348597;
 }
 
-#info .contents-area__right .info__cont .skill__title {
+.ly-contents__main .contents__item ul.skill li .skill__title {
   -ms-flex-negative: 0;
       flex-shrink: 0;
   width: 6.25rem;
 }
 
-#info .contents-area__right .info__cont .skill__bar {
+.ly-contents__main .contents__item ul.skill li .skill__bar {
   position: relative;
   width: 33.125rem;
   max-width: 33.125rem;
@@ -831,7 +717,7 @@ body.stop__scroll {
   overflow: hidden;
 }
 
-#info .contents-area__right .info__cont .skill__per {
+.ly-contents__main .contents__item ul.skill li .skill__per {
   position: absolute;
   top: 0;
   left: -100%;
@@ -844,7 +730,7 @@ body.stop__scroll {
   transition: left 0.4s ease-in;
 }
 
-#info .contents-area__right .info__cont .skill__per::before {
+.ly-contents__main .contents__item ul.skill li .skill__per::before {
   content: attr(data-per);
   position: absolute;
   top: 50%;
@@ -856,20 +742,141 @@ body.stop__scroll {
           transform: translateY(calc(-50% - 1px));
 }
 
-#info .contents-area__right .info__cont .skill__per.active {
+.ly-contents__main .contents__item ul.skill li .skill__per.active {
   left: 0;
 }
 
-#info .contents-area__right .info__cont .skill span {
+.ly-contents__main .contents__item ul.skill li span {
   display: block;
 }
 
-#info .contents-area__right .info__cont .skill + .skill {
+.ly-contents__main .contents__item ul.skill li + .skill {
   margin-top: 0.9375rem;
 }
 
-#info .contents-area__right .info__cont + .info__cont {
-  padding-left: 12.5rem;
+.ly-contents__main .contents__item ul.project {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: -1.25rem;
+}
+
+.ly-contents__main .contents__item ul.project li {
+  width: calc(33.33% - 1.25rem);
+  margin: 1.875rem 1.25rem 0 0;
+}
+
+.ly-contents__main .contents__item + .contents__item {
+  margin-top: 2.1875rem;
+}
+
+.ly-contents__main .contents .img-area {
+  display: inline-block;
+  width: 11.25rem;
+  height: 11.25rem;
+  border-radius: 50%;
+  background: url("../images/seo_em01.png") #ffffff no-repeat center center/contain;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+}
+
+.ly-contents__main .contents h2 {
+  font-size: 1.25rem;
+  color: #348597;
+  margin-bottom: 0.625rem;
+}
+
+.ly-contents__main .contents .q-list li {
+  position: relative;
+  color: #348597;
+  border-bottom: 0.0625rem solid #348597;
+  padding: 0.625rem 0.625rem 0.625rem 1.5625rem;
+}
+
+.ly-contents__main .contents .q-list li h3 {
+  font-size: 1rem;
+}
+
+.ly-contents__main .contents .q-list li h3 + * {
+  margin-top: 0.5rem;
+}
+
+.ly-contents__main .contents .q-list li p {
+  font-size: 0.875rem;
+  padding-left: 0.125rem;
+}
+
+.ly-contents__main .contents .q-list li + li {
+  margin-top: 1.25rem;
+}
+
+.ly-contents__main .contents .q-list li::before {
+  content: 'Q';
+  position: absolute;
+  top: 0.4375rem;
+  left: 0.3125rem;
+  font-size: 1.125rem;
+}
+
+.ly-contents__main .contents .msg-area {
+  position: relative;
+}
+
+.ly-contents__main .contents .msg-area textarea {
+  height: 3.125rem;
+  color: #348597;
+  border: 0.0625rem solid #348597;
+  padding: 0.3125rem 4.6875rem 0.3125rem 0.3125rem;
+}
+
+.ly-contents__main .contents .msg-area textarea::-webkit-input-placeholder {
+  color: #348597;
+}
+
+.ly-contents__main .contents .msg-area textarea:-ms-input-placeholder {
+  color: #348597;
+}
+
+.ly-contents__main .contents .msg-area textarea::-ms-input-placeholder {
+  color: #348597;
+}
+
+.ly-contents__main .contents .msg-area textarea::placeholder {
+  color: #348597;
+}
+
+.ly-contents__main .contents .msg-area textarea + button {
+  position: absolute;
+  top: 50%;
+  right: 0.625rem;
+  margin-top: -0.125rem;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.ly-contents__main .contents + .contents {
+  margin-top: 6.25rem;
+}
+
+.ly-contents-title {
+  padding-bottom: 1.25rem;
+}
+
+body.stop__scroll {
+  overflow: hidden;
+}
+
+.container {
+  max-width: 61.5625rem;
+  margin: 0 auto;
 }
 
 .dim {
@@ -903,11 +910,6 @@ body.stop__scroll {
           transform: translate(-50%, -50%);
 }
 
-.msg-area textarea {
-  height: 18.75rem;
-  border: 0.0625rem solid #dddddd;
-}
-
 .tag {
   display: inline-block;
   font-size: 0.625rem;
@@ -915,66 +917,55 @@ body.stop__scroll {
   color: #ffffff;
   border-radius: 0.1875rem;
   padding: 0.125rem 0.3125rem;
-  margin-top: 0.1875rem;
+  margin-top: 0.25rem;
+  margin-right: 0.125rem;
 }
 
 .tag.pc {
-  background-color: #428bca;
+  background-color: #ee6c4d;
 }
 
 .tag.mobile {
-  background-color: #2ecf46;
+  background-color: #f38d68;
 }
 
 .tag.response {
-  background-color: #428bca;
+  background-color: #662c91;
 }
 
 .tag.html {
-  background-color: #e9642a;
+  background-color: #17a398;
 }
 
 .tag.css {
-  background-color: #254bdd;
+  background-color: #eddea4;
 }
 
 .tag.scss {
-  background-color: #c76494;
+  background-color: #00a7e1;
 }
 
 .tag.script {
-  background-color: #e8d34d;
+  background-color: #7180ac;
 }
 
 .tag.jquery {
-  background-color: #8d2ae9;
+  background-color: #3aafb9;
 }
 
 @media (max-width: 1024px) {
-  .tab__contents {
-    display: none;
-  }
-  .tab__contents.on {
-    display: block;
-  }
-  .ly-contents__section .contents-area .tab__contents .img-area {
+  .ly-contents__main .contents .img-area {
     margin-top: 1.25rem;
     margin-left: 0;
-  }
-  .ly-contents__section .contents-area .tab__contents .view__btn {
-    margin-top: 1.25rem;
   }
   .ly-wrap .sort__contents .img-area {
     height: 12.5rem;
   }
-  .ly-contents__section#info .contents-area {
-    display: block;
-  }
-  .ly-contents__section#info .contents-area__left {
+  .ly-contents__section .contents-area__left {
     text-align: center;
     margin: 0 auto;
   }
-  .ly-contents__section#info .contents-area__right {
+  .ly-contents__section .contents-area__right {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -984,16 +975,16 @@ body.stop__scroll {
     padding-top: 3.125rem;
     padding-left: 0;
   }
-  #info .contents-area__right .info__cont {
+  .contents-area__right .info__cont {
     padding: 0 20px;
   }
-  #info .contents-area__right .info__cont .skill + .skill {
+  .contents-area__right .info__cont .skill + .skill {
     margin-top: 0.625rem;
   }
-  #info .contents-area__right .info__cont .skill__bar {
+  .contents-area__right .info__cont .skill__bar {
     margin-left: 0;
   }
-  #info .contents-area__right .info__cont-list ul.project li {
+  .contents-area__right .info__cont-list ul.project li {
     width: calc(50% - 1.25rem);
   }
 }
@@ -1012,30 +1003,29 @@ body.stop__scroll {
   .ly-wrap header.on .ly-header__logo {
     opacity: 1;
   }
-  .ly-contents__section#info .contents-area__right .info__cont-title h2 {
-    font-size: 1.25rem;
+  .ly-contents__main {
+    padding: 6.25rem 1.25rem;
   }
-  .gnb {
-    display: none;
+  .ly-contents__main .contents--modify {
+    display: block;
   }
-  .ly-contents__section {
+  .ly-contents__main .contents .img-area {
+    display: block;
+    margin: 0 auto 3.125rem;
+  }
+  .ly-contents__main .contents__list {
+    width: 100%;
     padding: 0;
   }
-  .ly-wrap .tab__btn {
-    font-size: 1.125rem;
+  .ly-contents__main .contents__list h2 {
+    font-size: 1.25rem;
+    margin-bottom: 0.9375rem;
   }
-  .ly-wrap .sort__contents {
-    margin-left: 2%;
+  .ly-contents__main .contents__item ul.project li {
+    width: 100%;
   }
   .ly-wrap .skills-area .skill-name:hover {
     top: 0;
-  }
-  .ly-wrap .sort__contents {
-    width: 100%;
-  }
-  .ly-wrap .sort__contents .contents {
-    width: 47%;
-    margin-right: 3%;
   }
   .ly-contents__visual .visual__intro-wrap .intro__title {
     width: 100%;
@@ -1051,49 +1041,6 @@ body.stop__scroll {
   }
   .ly-contents__visual .visual__intro-wrap .title {
     font-size: 2rem;
-  }
-  .ly-wrap .sort__contents .img-area {
-    height: 10rem;
-  }
-  .ly-contents__section#info .contents-area {
-    display: block;
-  }
-  .ly-contents__section#info .contents-area__right {
-    width: 100%;
-  }
-  .ly-contents__section#info .contents-area__right .info__cont-group {
-    display: block;
-  }
-  .ly-contents__section#info .contents-area__right .info__cont-group h3 {
-    display: inline-block;
-  }
-  .ly-contents__section#info .contents-area__right .info__cont-right {
-    margin-top: 0.9375rem;
-    padding-left: 0;
-  }
-  .ly-contents__section#info .contents-area__right .info__cont .skill {
-    font-size: 0.75rem;
-  }
-  .ly-contents__section#info .contents-area__right .info__cont .skill__bar {
-    height: 0.625rem;
-  }
-  .ly-contents__section#info .contents-area__right .info__cont .skill-item {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin-top: 0.625rem;
-  }
-  .ly-contents__section#info .contents-area__right .info__cont + .info__cont {
-    padding-left: 0;
-  }
-  #info .contents-area__right .info__cont .skill__per::before {
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
-  }
-  .msg-area textarea {
-    height: 15.3125rem;
-  }
-  #info .contents-area__right .info__cont-list ul.project li {
-    width: 100%;
   }
 }
 
@@ -1230,5 +1177,32 @@ body.stop__scroll {
   -webkit-transform: translateX(50%) rotate(45deg);
           transform: translateX(50%) rotate(45deg);
   border-radius: 2px;
+}
+
+footer {
+  background-color: #348597;
+}
+
+footer .ly-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 61.5625rem;
+  margin: 0 auto;
+  height: 5rem;
+  font-size: 0.75rem;
+  color: #f3a94f;
+  text-align: center;
+  padding: 0 5%;
+}
+
+footer .ly-footer p {
+  line-height: 1.2;
 }
 /*# sourceMappingURL=ui.css.map */
